--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
   "author": "Justice League HNGi7 Team",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^54.0.0",
     "node-fetch": "^2.6.0",
-    "pg": "^8.3.0"
+    "nodemailer": "^6.4.10",
+    "pg": "^8.3.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
